# task-tracker-cli

./: LICENSE  Makefile  pyproject.toml
src/: config.py
src/task_cli/: app.py
src/task_cli/models/: task.py
src/task_cli/services/: __init__.py  add_task.py  delete_task.py  list_tasks.py  mark_status.py  update_task.py
src/task_cli/storage/: json_store.py
tests/models/: test_task.py
tests/services/: test_add.py  test_delete.py  test_list.py  test_mark.py  test_update.py
tests/storage/: test_json_store.py
